nginx-deployment/service.yaml
apiVersion: v1
kind: Service
metadat: 
  app: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
   type: ClusterIP
